Fixed some spacing issue

--- a/src/styles/scss/partials/index.scss
+++ b/src/styles/scss/partials/index.scss
@@ -1,6 +1,5 @@
 body{
     margin:0 auto;
-    padding: auto;
     font-family: 'Roboto Condensed', sans-serif;
     color: $textColor;
     background: $white;
@@ -37,6 +36,9 @@ h1#mainHeader {
 }
 section{
     width: 100%;
+    max-width: 960;
+    margin: auto;
+    max-width: 960px;
     // & .container{
     //     background-color: aqua;
     // }
@@ -55,13 +57,10 @@ ul {
     font-weight:300;
 }
 .fullwidth{
-    // background-color: rgb(201, 222, 240);
-    width: 100vw;
     max-width: 100vw;
     margin-left: calc(50% - 50vw);
     overflow: hidden;
-    // padding-left: calc(50% - 50vw);
-    // width: calc(100% - var(--padding) * 2);
+
 }
 .summary{
     // max-width: fit-content;
@@ -105,10 +104,6 @@ ul {
         // text-align: center;
     }
 }
-.content{
-    margin: auto;
-    max-width: 960px;
-}
 a{
     text-decoration: none;
     color: $textColor;
@@ -131,7 +126,9 @@ a{
     flex-direction: row;
 }
 
-
+section.employed{
+    margin:0%;
+}
 
 
 @media(min-width: 600px) {
